# passwordmaker-slint

./: Cargo.toml  README.md  build.rs  passwordmaker-slint.desktop  passwordmaker.slint
src/: main.rs  pwm_gui_data.rs  pwm_settings.rs
ui/: make_page.slint  page.slint  pages.slint  settings.slint  settings_page.slint  side_bar.slint
