[package]
name = "passwordmaker_slint"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4.1"
#passwordmaker-rs = "0.2.1"
passwordmaker-rs = { path = "../passwordmaker-rs" }
serde = { version = "1.0", features = ["derive"] }
strum = "0.26.0"
strum_macros = "0.26.0"
once_cell = "1.19.0"
toml = "0.8.12"
digest = "0.10.5"
md4 = "0.10.2"
md-5 = "0.10.5"
sha-1 = "0.10.0"
sha2 = "0.10.6"
ripemd = "0.1.3"
regex = "1.10.4"


[build-dependencies]
slint-build = "1.4.1"